Artemis Messenger 4.0.0 overhaul, added comments, finished help contents

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,9 +54,7 @@
     <string name="connect">Connect</string>
     <string name="showRoute">Route</string>
     <string name="helpButton">Help</string>
-    <string name="distanceHeader">Distance</string>
     <string name="title_activity_help">HelpActivity</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="helpTopicsKey">helpTopicsMenuItem</string>
     <string name="helpStartupKey">helpStartupCheckBox</string>
@@ -79,7 +77,7 @@
     <string name="basicsLeavingHeader">Leaving Artemis Messenger</string>
     <string name="closeButton">Close</string>
     <string name="basicsParagraph4">You will know that the connection was successful if the area around the Address bar turns green. You will probably all see text appear in the box below it; that is the ship selector box. Click it to switch to any of the eight ships; you will then assume a Comms role for that ship.</string>
-    <string name="basicsParagraph6">If you press the Home button on your phone to return to your Home menu, Artemis Messenger will keep running in the background. It will continue to receive information about side missions, allies and stations via a Comms service. This information will be shown as notifications on your phone. If you click on one of those notifications, you will return to Artemis Messenger.</string>
+    <string name="basicsParagraph6">If you touch the Home button on your phone to return to your Home menu, Artemis Messenger will keep running in the background. It will continue to receive information about side missions, allies and stations via a Comms service. This information will be shown as notifications on your phone. If you click on one of those notifications, you will return to Artemis Messenger.</string>
     <string name="basicsParagraph5">When you want to leave Artemis Messenger, just hit the Back button on your phone. If your phone doesn\'t have a Back button, you can also press the Close button in the top-right corner of the screen. If the app is connected to a server, a dialog will appear asking if you want to close the connection; otherwise, no dialog will appear.</string>
     <string name="helpTitle">Help</string>
     <string name="appVersionText">Artemis Messenger 3.1.0</string>
@@ -87,4 +85,49 @@
     <string name="licenseText">\u00A9 Copyright 2017.</string>
     <string name="writtenBy">Written by Jordan Longstaff</string>
     <string name="backButton">Back</string>
+    <string name="missionsParagraph1">While running the Artemis Messenger app, touch the Missions button to open the Missions view. This is where you can see all of the side missions that are currently running. Whenever you start Artemis Messenger, the Missions view is open by default.</string>
+    <string name="missionsParagraph7">Extra Coolant: Engineering will receive two additional units of coolant to use as desired.</string>
+    <string name="missionsParagraph8">Nuclear Missiles: Your ship will receive two additional Type 4 Nuke torpedoes.</string>
+    <string name="missionsParagraph9">Production Speed: The station that issued the side mission will begin producing torpedoes twice as fast.</string>
+    <string name="missionsParagraph3">X45 Terran Science Vessel\nHelp us help you.\nFirst, rendezvous with D13 and download some data we need. Then, rendezvous with us, and we\'ll give you more engineering coolant.</string>
+    <string name="missionsParagraph4">This message gives you the following information. First, you are being told to go to D13 and rendezvous with them. Second, after that, you must go to X45, the sender of the message. Finally, your reward is that they will give you more engineering coolant.</string>
+    <string name="missionsParagraph5">When this information is received, it is organized into the Missions table. The Source is the location to visit first, the Destination is the location to visit second, and the Reward is what you will receive. The possible rewards are as follows.</string>
+    <string name="missionsParagraph6">Battery Charge: Your ship will receive some additional energy.</string>
+    <string name="missionsParagraph2">Side missions occur during a running simulation and offer the player an opportunity to acquire various bonuses that last for the remainder of the simulation. These side missions are issued to the Comms officer by an ally ship or station, and include instructions to visit another ship or station before going there to receive a reward. For example, Comms may receive a message like this:</string>
+    <string name="missionsParagraph10">Shield Boost: The front and rear shield capacities of your ship will be increased.</string>
+    <string name="missionsParagraph11">The Missions table compresses itself as much as possible by merging entries with the same Source and Destination. In this way, a single entry may show multiple rewards. If a reward would be received more than once, a \"x2\" or similar multiplier will be shown for that reward. Be sure to pay attention to all rewards shown within a single entry.</string>
+    <string name="missionsParagraph12">During a side mission, the next location to visit will be shown in orange. For example, if that location is the Source, you must go there in order to start the mission, at which point the Destination will become orange. After reaching the Destination, thereby completing the mission, the entire row will turn green. After this, you can touch that row to remove it from the table.</string>
+    <string name="missionsHeader">What are side missions?</string>
+    <string name="alliesParagraph2">There are three columns in the Allies table. The Ship column shows the ship\'s name, the Shields column shows its front and rear shield strengths, and the Status column shows the status of the ship.</string>
+    <string name="alliesParagraph1">While running the Artemis Messenger app, touch the Allies button to open the Allies view. This view shows the statuses of all of the ally ships in the currently running simulation.</string>
+    <string name="alliesParagraph13">Fighter trap: The ship is a disguised fleet of fighters. Do not approach the ship under any circumstances. Destroy it from a distance.</string>
+    <string name="alliesParagraph14">Mine trap: The ship is programmed to self-destruct when your ship approaches. Do not approach the ship under any circumstances. Destroy it from a distance.</string>
+    <string name="alliesParagraph11">Hostages: The ship has been taken over and the crew is being held hostage. To save them, fly near the ship with at least 900 units of energy, which will be given to the captors, and the ship will reward you by enhancing your shield generators. If you have less than 900 units of energy, the ship will self-destruct.</string>
+    <string name="alliesParagraph12">Commandeered: The ship has been taken over by a hostile force. To save the ship, you must approach the ship while it is in a nebula. If you approach while the ship is not in a nebula, it will self-destruct.</string>
+    <string name="alliesParagraph3">As with the Missions view, Artemis Messenger obtains information about the status of the ship via incoming Comms messages. Whenever it connects to a running simulation, it sends a hail message to all ally ships, and then they respond with their status. The status information includes whether or not they have energy to spare, which can be acquired by simply flying near them. In Deep Strike, the ship will also tell you if it has extra torpedoes on board. For this purpose, Artemis Messenger sends a hail message every 5 minutes.</string>
+    <string name="alliesParagraph6">Delivering reward: The ship is headed to a station to drop off some extra torpedoes. Interact at your own discretion.</string>
+    <string name="alliesParagraph7">Flying blind: The ship is stuck. You can fix this by sending it to a station.</string>
+    <string name="alliesParagraph10">Malfunction: The ship\'s computers are down, leaving the ship stranded. You can fix this by firing a Type 9 EMP torpedo at the ship, which will reboot its computer system.</string>
+    <string name="alliesParagraph4">In addition to energy and torpedoes, the Status column also displays the number of current side missions that involve the ship. Finally, the ally ships will report their current status, and Artemis Messenger will display this status and any recommendations for interaction. The statuses the ships may report are as follows.</string>
+    <string name="alliesParagraph5">Normal: The ship is just fine. Interact at your own discretion.</string>
+    <string name="alliesParagraph8">Need 100 energy: The ship is out of energy and cannot move. You can fix this by flying near the ship with at least 100 units of energy, which will be transferred to the ship.</string>
+    <string name="alliesParagraph9">Need DamCon teams: The ship is damaged and needs repair. You can fix this by flying near the ship.</string>
+    <string name="alliesHeader">What does it show?</string>
+    <string name="stationsParagraph1">While running the Artemis Messenger app, touch the Stations button to open the Stations view. This view shows all of the docking stations in the currently running simulation.</string>
+    <string name="stationsParagraph3">Like with the Missions and Allies views, Artemis Messenger obtains ordnance information for each station from incoming Comms messages. When the app connects to a running simulation, it sends a message to each station, and the station responds with a status report. This also happens when the player ship docks, undocks, orders a new type of ordnance to be built, or the station finishes building a torpedo.</string>
+    <string name="stationsParagraph4">If you touch a station\'s entry row in the table, the app will send a message to that station to stand by for docking.</string>
+    <string name="stationsParagraph2">There are two columns in the Stations table. The Station column shows the name and type of each station, its shield strength, the number of replacement fighters on board, the number of side missions that involve it, and whether or not you are docked there. The Ordnance column shows the current stock of all ordnance types and an indication of what ordnance is currently being built.</string>
+    <string name="settingsDataHeader">Vessel data</string>
+    <string name="settingsParagraph1">While running the Artemis Messenger app, touch the wrench next to the ship selection box to open the Settings menu. This is where you can change your preferences about how the app behaves.</string>
+    <string name="settingsParagraph2">Artemis Messenger requires a copy of the vesselData.xml file that Artemis uses. There is already a copy bundled with the app, so if you want to use it, change the location to Default. If you want to use your own, change the location to Internal storage or External storage, as appropriate. This is useful if you are running a mod. If vesselData.xml is missing at that location, Artemis Messenger will copy its own files there.</string>
+    <string name="settingsParagraph5">You can also access the Help menu from the Settings menu by touching Show help topics. If you access the Help menu in this way, you will return to the Settings menu when you leave. By default, the Help menu is set to display whenever you start up Artemis Messenger; you can turn off this function by touching Show help at startup.</string>
+    <string name="settingsParagraph4">When Artemis Messenger is running in the background, the Comms service keeps you updated on side missions using notifications. You can make Artemis Messenger play different ringtones whenever such a notification is made. There are three types of notifications: New side mission, Arrived at source and Arrived at destination.</string>
+    <string name="settingsParagraph3">There may be some side missions that you would prefer to ignore, especially if they offer rewards that do not interest you. You can remove those missions from the Missions table using the reward filters. When a filter is activated, any side mission that offers the corresponding reward will be shown. For example, a mission offering Battery Charge and Extra Coolant will be shown if either filter is activated; if both are off, it will be hidden. Touch Show All to activate all filters.</string>
+    <string name="settingsHelpHeader">Help</string>
+    <string name="settingsFilterHeader">Reward filters</string>
+    <string name="settingsRingtoneHeader">Notifications</string>
+    <string name="routingParagraph1">While running the Artemis Messenger app, touch the Routing button to open the Routing view. In this view, you will be shown the minimum distance route to take in order to complete all side missions currently in the Missions view.</string>
+    <string name="routingParagraph2">There are two columns in the Routing table. The Destination column shows the names of the locations to visit, in order from top to bottom, according to the routing algorithm. The Direction column shows the direction and distance from the player ship to each stop. As each stop is visited, the appropriate entries in the Routing table will disappear.</string>
+    <string name="directionHeader">Direction</string>
+    <string name="routingParagraph3">Note that the route you are given is the route of minimum distance, which is not necessarily the optimal route. For example, the algorithm does not know the locations of potential hazards such as black holes, mines or space monsters.</string>
 </resources>
