--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="basicsParagraph6">If you touch the Home button on your phone to return to your Home menu, Artemis Messenger will keep running in the background. It will continue to receive information about side missions, allies and stations via a Comms service. This information will be shown as notifications on your phone. If you click on one of those notifications, you will return to Artemis Messenger.</string>
     <string name="basicsParagraph5">When you want to leave Artemis Messenger, just hit the Back button on your phone. If your phone doesn\'t have a Back button, you can also press the Close button in the top-right corner of the screen. If the app is connected to a server, a dialog will appear asking if you want to close the connection; otherwise, no dialog will appear.</string>
     <string name="helpTitle">Help</string>
-    <string name="appVersionText">Artemis Messenger 4.2.0</string>
+    <string name="appVersionText">Artemis Messenger 4.2.1</string>
     <string name="specialThanks">Special thanks to Robert J. Walker for writing the IAN (Interface for Artemis Networking) library, without which this app could not exist. IAN is available on GitHub.</string>
     <string name="licenseText">\u00A9 Copyright 2017.</string>
     <string name="writtenBy">Written by Jordan Longstaff</string>
@@ -139,4 +139,5 @@
     <string name="settingsParagraph6">You can also access the Help menu from the Settings menu by touching Show help topics. If you access the Help menu in this way, you will return to the Settings menu when you leave. By default, the Help menu is set to display whenever you start up Artemis Messenger; you can turn off this function by touching Show help at startup.</string>
     <string name="settingsRouteHeader">Routing</string>
     <string name="commandeeredKey">commandeeredCheckBox</string>
+    <string name="hasTorpsKey">hasTorpsCheckBox</string>
 </resources>
