Added a bit of explanatory text in the Settings activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -140,4 +140,5 @@
     <string name="settingsRouteHeader">Routing</string>
     <string name="commandeeredKey">commandeeredCheckBox</string>
     <string name="hasTorpsKey">hasTorpsCheckBox</string>
+    <string name="includeAlliesKey">includeAllyShips</string>
 </resources>
