--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="alliesHint">Touch row to request status update</string>
     <string name="stationsHint">Touch row to request docking standby or build next ordnance type</string>
     <string name="routingHint">Change routing options in Settings</string>
+    <string name="connectHint">Connect to a server</string>
     <string name="showMissions">Missions</string>
     <string name="showAllies">Allies</string>
     <string name="shipHeader">Ship</string>
@@ -69,6 +70,7 @@
     <string name="baseDestroyedPrefKey">baseDestroyedPrefKey</string>
     <string name="connect">Connect</string>
     <string name="availableServers">Available servers</string>
+    <string name="recentHosts">Recent servers</string>
     <string name="scanServers">Find servers</string>
     <string name="scanning">Scanning&#8230;</string>
     <string name="showRoute">Route</string>
@@ -82,6 +84,8 @@
     <string name="serverTimeoutTitle">Server timeout</string>
     <string name="udpTimeoutKey">udpTimeoutText</string>
     <string name="udpTimeoutTitle">Broadcast timeout</string>
+    <string name="recentHostsKey">recentHostsText</string>
+    <string name="recentHostsTitle">Number of servers to remember</string>
     <string name="allowUDPKey">allowUDPCheckBox</string>
     <string name="allowUDPTitle">Allow server detection</string>
     <string name="allowUDPSummary">If checked, server connections may be detected via UDP broadcast.</string>
@@ -112,7 +116,7 @@
     <string name="basicsParagraph6">If you touch the Home button on your phone to return to your Home menu, Artemis Messenger will keep running in the background. It will continue to receive information about side missions, allies and stations via a Comms service. This information will be shown as notifications on your phone. If you click on one of those notifications, you will return to Artemis Messenger.</string>
     <string name="basicsParagraph5">When you want to leave Artemis Messenger, just hit the Back button on your phone. If your phone doesn\'t have a Back button, you can also press the Close button in the top-right corner of the screen. If the app is connected to a server, a dialog will appear asking if you want to close the connection; otherwise, no dialog will appear.</string>
     <string name="helpTitle">Help</string>
-    <string name="appVersionText">Artemis Messenger 5.2.0</string>
+    <string name="appVersionText">Artemis Messenger 5.3.0</string>
     <string name="specialThanks">Special thanks to Robert J. Walker for writing the IAN (Interface for Artemis Networking) library, without which this app could not exist. IAN is available on GitHub.</string>
     <string name="licenseText">\u00A9 Copyright 2017.</string>
     <string name="writtenBy">Written by Jordan Longstaff</string>
